--- a/index.html
+++ b/index.html
@@ -1,77 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Oswald&family=Roboto&display=swap" rel="stylesheet">
-  <title>Bob Summers Landscaping</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Oswald&family=Roboto&display=swap" rel="stylesheet">
+    <title>Harpreet Singh's - Landscaping Services</title>
 </head>
+
 <body>
-<div id="wrapper">
-<header>
-  <div class="topbar navbar navbar-expand-lg navbar-light bg-light sticky-top" role="navigation">
-  <form >
-    <label class="topbarlabel" for="qoute"> Request a Free Quote:</label>
-    <input class="topbaremail" type="email" id="qoute" placeholder="Enter your email here..." required>
-    <input class="topbarbutton" type="submit" value="Send Request">
-  </form>
-</div>
-    <img class="center" alt="This is a website logo" src="images/logott.png" width="200" height="150">
-  <!--  Nav bar code-->
-    <nav>
-      <ul>
-         <li><a title="Home Page" href="index.html"  aria-haspopup="true">Home</a></li>
-         <li><a title="Bob Summers Services" href="services.html">Services</a>  </li>
-         <li> <a title="Past Projects" href="pastprojects.html">Past Projects</a></li>
-         <li><a title="Landscaping Tips" href="Tips.html">Landscaping Tips</a> </li>
-         <li><a title="About Us" href="aboutus.html">About Us</a> </li>
-         <li><a title="Contact Us" href="contactus.html">Contact Us</a> </li>
-      </ul>
-    </nav>
-      <img alt="bgImage" src="images/background.jpg" class="floatimg">
-      <div>
-      <h1><span>What Our Clients Are Saying</span></h1>
+    <div id="wrapper">
+        <header>
+            <div class="topbar navbar navbar-expand-lg navbar-light bg-light sticky-top" role="navigation">
+                <form>
+                    <label class="topbarlabel" for="qoute"> Request a Free Quote:</label>
+                    <input class="topbaremail" type="email" id="qoute" placeholder="Enter your email here..." required>
+                    <input class="topbarbutton" type="submit" value="Send Request">
+                </form>
+            </div>
+            <img class="center" alt="This is a website logo" src="images/logott.png" width="200" height="150">
+            <!--  Nav bar code-->
+            <nav>
+                <ul>
+                    <li><a title="Home Page" href="index.html" aria-haspopup="true">Home</a></li>
+                    <li><a title="Bob Summers Services" href="services.html">Services</a> </li>
+                    <li> <a title="Past Projects" href="pastprojects.html">Past Projects</a></li>
+                    <li><a title="Landscaping Tips" href="Tips.html">Landscaping Tips</a> </li>
+                    <li><a title="About Us" href="aboutus.html">About Us</a> </li>
+                    <li><a title="Contact Us" href="contactus.html">Contact Us</a> </li>
+                </ul>
+            </nav>
+            <img alt="bgImage" src="images/background.jpg" class="floatimg">
+            <div>
+                <h1><span>What Our Clients Are Saying</span></h1>
+            </div>
+        </header>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img class="testimg center" src="images/testi1.jpg" alt="Image of Testimonials">
+                    <h2> The Moore Family </h2>
+                    <p class="tips">"Thank you for the inhalation of our driveway and front steps. The job turned out beautifully! It looks even better than I imagined. We have received many favorable comments regarding your workers and the end product; our neighbours
+                        were very impressed with the work ethic of everyone. You did everything that you stated you would do, when you stated you would do it, and went above and beyond to ensure the job was perfect. I am very grateful for your honesty,
+                        integrity and skills."</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img class="testimg center" src="images/background5.jpg" alt="Image of Testimonials">
+                    <h2> The Jones Family </h2>
+                    <p class="tips">"We couldn't be any more pleased with the appearance and workmanship of the job you completed for us. Your design suggestions and layout were creative and yet totally appropriate for the look and layout of our house and property. It
+                        all integrates so well that one person didn't notice we had landscaping recently done; they thought it had been there the whole time!"</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p class="copyright">&#169; 2021 Bob Summers Landscaping &#124; All Rights Reserved.</p>
+            <p> Follow us @: <img alt="Facebook Logo" src="images/fblogo.png" width="60" height="60" /> <img alt="Instagram Logo" src="images/instagram.png" width="60" height="60" /></p>
+        </footer>
+
     </div>
-  </header>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-      <img class="testimg center" src="images/testi1.jpg" alt="Image of Testimonials">
-      <h2> The Moore Family </h2>
-        <p class="tips">"Thank you for the inhalation of our driveway and front steps.
-          The job turned out beautifully! It looks even better than I imagined. We have received many
-          favorable comments regarding your workers and the end product; our neighbours were very impressed with
-          the work ethic of everyone. You did everything that you stated you would do,
-          when you stated you would do it, and went above and beyond to ensure the job was perfect.
-          I am very grateful for your honesty, integrity and skills."</p>
-  </div>
-</div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-  <img class="testimg center" src="images/background5.jpg" alt="Image of Testimonials">
-  <h2> The Jones Family </h2>
-  <p class="tips">"We couldn't be any more pleased with the appearance and workmanship of the job you completed for us.
-    Your design suggestions and layout were creative and yet totally appropriate for the look and layout of our house and property.
-     It all integrates so well that one person didn't notice we had landscaping recently done; they thought it had been there the whole time!"</p>
-</div>
-</div>
-</div>
-    <footer>
-    <p class="copyright">&#169; 2021  Bob Summers Landscaping &#124; All Rights Reserved.</p>
-    <p> Follow us @: <img alt="Facebook Logo" src="images/fblogo.png" width="60" height="60"/> <img alt="Instagram Logo" src="images/instagram.png" width="60" height="60"/></p>
-  </footer>
-
-</div><!-- container -->
-<script src="js/jquery.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+    <!-- container -->
+    <script src="js/jquery.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
