--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Coding Depot - Home Page(Harpreet Singh)</title>
-  </head>
-  <body>
-    <header>
-      <!-- Nav Bar Begins -->
-      <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+</head>
+
+<body>
+    <!-- Nav Bar Begins -->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand namesize" href="#">
-      <img src="images/logo3.png" alt=""class="d-inline-block align-text-top">Coding Depot
+                <img src="images/logo3.png" alt="" class="d-inline-block align-text-top">Coding Depot
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,32 +47,73 @@
                         <a class="nav-link  align-text-top" aria-current="page" href="#">Contact Us</a>
                     </li>
                 </ul>
+                <div class="mx-2">
+                    <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+                    <button class="btn btn-success btn-sm">Sign Up</button>
+                </div>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success btn-lg" type="submit">Search</button>
+                    <button class="btn btn-dark btn-lg search-button" type="submit">Search</button>
                 </form>
-
-                <!--
-                <div class="mx-2">
-                    <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                    <button class="btn btn-outline-danger">Sign Up</button>
-                </div>
-                -->
             </div>
         </div>
     </nav>
     <!-- Nav Bar ends -->
-      <!-- hero image and Call to action Image begins-->
-      <div class="cantainer">
-                <img src="images/slide3.jpeg" class="img-fluid hpImage w-100" alt="Youtube">
-        </div>
+    <!-- hero image and Call to action Image begins-->
+    <div class="cantainer">
+        <img src="images/slide3.jpeg" class="img-fluid hpImage w-100" alt="Youtube">
         <div class="container-fluid call-heading">
-            <p class="h1 heroheader">1:1 Online  <br/> Coding Classes</p>
+            <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
-          <br /><br />  <button type="button" class="btn btn-outline-success">Request a Demo/Quote</button>
+            <br /><br />  <button type="button" class="btn btn-outline-success btn-lg call-button">Request you Free Demo</button>
+          </div>
         </div>
   <!-- hero image ends -->
-</header>
+<main>
+  <h2>Coding Depot is different!</h2>
+  <section>
+            <div class="container my-4">
+                <div class="row featurette d-flex justify-content-center align-items-center">
+                    <div class="col-md-7 ">
+                        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        </div>
+        <div class="col-md-5">
+            <img src="images/index3.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+
+        </div>
+    </div>
+    <hr class="featurette-divider">
+    <div class="row featurette d-flex justify-content-center align-items-center">
+        <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+            <img src="images/index2.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+
+        </div>
+    </div>
+    <hr class="featurette-divider">
+    <div class="row featurette d-flex justify-content-center align-items-center">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        </div>
+        <div class="col-md-5 ">
+            <img src="images/index1.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+        </div>
+    </div>
+
+    </div>
+    </section>
+    </main>
+    <footer>
+        <div class="container-fluid">
+            <h5>Coding Depot Inc. &copy All Rights Reserved .</h5>
+            <p> Website designed by: Harpreet Singh - 201908442</p>
+        </div>
+    </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
@@ -80,5 +122,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
