--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Nav Bar Begins -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand namesize" href="#">
-                <img src="images/logo3.png" alt="" class="d-inline-block align-text-top">Coding Depot
+            <a class="navbar-brand namesize" href="index.html">
+                <img src="images/logo3.png" alt="Logo of Coding Depot" class="d-inline-block align-text-top">Coding Depot
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,29 +22,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active align-text-top" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active align-text-top" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  align-text-top" aria-current="page" href="#">About Us</a>
+                        <a class="nav-link  align-text-top" aria-current="page" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="courses.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Courses
                 </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Coding for Grade 2 to 5</a></li>
-                            <li><a class="dropdown-item" href="#">Coding for Grade 6 to 12</a></li>
-                            <li><a class="dropdown-item" href="#">Vedic Maths Classes</a></li>
+                            <li><a class="dropdown-item" href="code25.html">Coding for Grade 2 to 5</a></li>
+                            <li><a class="dropdown-item" href="code612.html">Coding for Grade 6 to 12</a></li>
+                            <li><a class="dropdown-item" href="vedicm.html">Vedic Maths Classes</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Price</a>
+                        <a class="nav-link" href="price.html">Price</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  align-text-top" aria-current="page" href="#">Testimonials</a>
+                        <a class="nav-link  align-text-top" aria-current="page" href="testimonials.html">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  align-text-top" aria-current="page" href="#">Contact Us</a>
+                        <a class="nav-link  align-text-top" aria-current="page" href="contactus.html">Contact Us</a>
                     </li>
                 </ul>
                 <div class="mx-2">
@@ -53,7 +53,7 @@
                 </div>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-dark btn-lg search-button" type="submit">Search</button>
+                    <a href="courses.html"><button class="btn btn-dark btn-lg search-button" type="submit">Search</button></a>
                 </form>
             </div>
         </div>
@@ -61,11 +61,11 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/slide3.jpeg" class="img-fluid hpImage w-100" alt="Youtube">
+        <img src="images/slide3.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
         <div class="container-fluid call-heading">
             <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
-            <br /><br />  <button type="button" class="btn btn-outline-success btn-lg call-button">Request you Free Demo</button>
+            <br /><br />  <a href="contactus.html"><button type="button" class="btn btn-outline-success btn-lg call-button">Request you Free Demo</button></a>
           </div>
         </div>
   <!-- hero image ends -->
@@ -75,8 +75,8 @@
             <div class="container my-4">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="col-md-7 ">
-                        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+                        <h2 class="featurette-heading">Designed for learning <span class="text-muted">Practical Exposure</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis modi ex sapiente cumque facilis nobis maiores, ipsa ut? Repellat perspiciatis est eum libero, dolore deserunt nobis in corporis iusto consectetur?</p>
         </div>
         <div class="col-md-5">
             <img src="images/index3.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
@@ -86,8 +86,8 @@
     <hr class="featurette-divider">
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+            <h2 class="featurette-heading">Smart and interactive <span class="text-muted">Kids can inspect code</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique quidem sit dolor. Ipsa atque, similique sapiente veritatis rem eius quos necessitatibus aut at, fugit fugiat distinctio, adipisci totam aperiam?</p>
         </div>
         <div class="col-md-5 order-md-1">
             <img src="images/index2.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
@@ -97,8 +97,8 @@
     <hr class="featurette-divider">
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+            <h2 class="featurette-heading">Practical Assignments <span class="text-muted">Yes we give homework</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consequuntur temporibus explicabo vel. Magni, tempore, consectetur veritatis cum ipsum id, aliquid vitae unde nesciunt eum dolorem illum quibusdam doloribus nam.</p>
         </div>
         <div class="col-md-5 ">
             <img src="images/index1.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
