--- a/code612.html
+++ b/code612.html
@@ -61,7 +61,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
         <div class="container-fluid call-heading">
             <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
