--- a/price.html
+++ b/price.html
@@ -61,7 +61,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
         <div class="container-fluid call-heading">
             <p class="h1">Most Creative <br/> Membership ever...</p>
             <span class="h4">Join our community of lifelong creators. <br>All memberships include 1:1 virtual classes,<br> unlimited access to Codeverse Studio, on-demand content, and live streams.<span>
