--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Smart and interactive <span class="text-muted">Kids can inspect code</span></h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique quidem sit dolor. Ipsa atque, similique sapiente veritatis rem eius quos necessitatibus aut at, fugit fugiat distinctio, adipisci totam aperiam?</p>
+            <p class="lead">Make Something Extraordinary with Coding Depot  like Coding for Kids. Our award-winning courses for ages 8 and up impart real 21st century skills.
+                Our friendly teachers will help your child through messaging and screen share.</p>
         </div>
         <div class="col-md-5 order-md-1">
             <img src="images/index2.jpeg" alt="kids performing coding Image2" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
@@ -119,7 +120,7 @@
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7">
             <h2 class="featurette-heading">Practical Assignments <span class="text-muted">Yes we give homework</span></h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consequuntur temporibus explicabo vel. Magni, tempore, consectetur veritatis cum ipsum id, aliquid vitae unde nesciunt eum dolorem illum quibusdam doloribus nam.</p>
+            <p class="lead">Coding Depot students learn professional languages such as Python, JavaScript, and Java while using the same tools used at companies like Google, Facebook, and Intel.</p>
         </div>
         <div class="col-md-5 ">
             <img src="images/index1.jpeg" alt="kids performing coding Image3" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
